# resilio-app

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.md.backup  CLAUDE_LEGACY.md  IMPLEMENTATION_PROGRESS.md  LICENSE  README.md  STRAVA_TESTING_RESULTS.md  VDOT_IMPROVEMENTS_SUMMARY.md  pyproject.toml
.claude/agents/: macro-planner.md  vdot-analyst.md  weekly-planner.md
.claude/skills/: REFACTORING_STATUS.md
activities/2026-01/: 2026-01-14_run_0000.yaml
athlete/: profile.yaml
config/: settings.yaml
data_BACKUP/athlete/: profile.yaml
data_BACKUP/metrics/: weekly_summary.yaml
data_BACKUP/plans/: current_plan.yaml
docs/: IMPLEMENTATION_PROGRESS.md  getting_started.html  getting_started_non_coders.html  phase1_completion.md
docs/agent_skill_standard/: overview.md
docs/claude_documentation/: skill_refactor_plan.md
docs/coaching/: cli_reference.md  methodology.md  scenarios.md
docs/codex_documentation/: agent_skill_overview.md
docs/landing_page_handoff/: 01-landing-brief.md  02-messaging-and-claims.md  03-design-patterns-and-systems-research.md
docs/long_term_vision/: [Run app] Competitive Analysis - Apps for athelte.csv  [Run app] Competitive Analysis - Apps for coach.csv  [Run app] Product Vision Doc.md  [Run app] User quotes.csv
docs/mvp/: v0_product_requirements_document.md  v0_technical_specification.md  v0_user_scenarios.md
docs/specs/: api_layer.md  cli_plan.md
resilio/: __init__.py  init.py
scripts/: README.md
sports_coach_engine/: __init__.py  init.py
templates/: secrets.local.yaml  settings.yaml
tests/: __init__.py  conftest.py
(+653 files in other folders)
